src/objects/Distribution__c.object
<CustomObject>
    <fields>
        <fullName>DistributedDate__c</fullName>
        <label>Distributed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallerComment__c</fullName>
        <label>Installer Comment</label>
        <type>TextArea</type>
    </fields>
    <label>Distribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>